# qrcode_telebot

./: .gitignore  README.md  pyproject.toml
src/: db.py  handlers.py  main.py  qr.py  qrcode.py  settings.py  utils.py
tests/: conftest.py  test_main.py
