[project]
name = "qrcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qreader>=3.14",
    "zxing-cpp>=2.2.0",
    "sqlalchemy>=2.0.34",
    "asyncpg>=0.29.0",
    "aiogram>=3.13.0",
    "pydantic-settings>=2.5.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "module"